--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
 <body>
     <h1>this is version v4</h1>
 </body>
-</html>
+</html>git remote add origin https://github.com/Vaishnavi-589/My-repo.git
+git branch -M main
+git push -u origin main
