--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is version v6</h1>
+    <h1>this is version V7</h1>
 </body>
-</html>git remote add origin https://github.com/Vaishnavi-589/My-repo.git
-git branch -M main
-git push -u origin main
+</html>
